--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <!--    <color name="color1">#002050</color>-->
+    <color name="lightwhite">#E6E5E5</color>
+    <color name="color1">#00AA99</color>
+
 </resources>
