--- a/app/src/main/res/layout/activity_enable.xml
+++ b/app/src/main/res/layout/activity_enable.xml
@@ -5,5 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EnableActivity">
-
+<Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toTopOf="parent"
+    android:text="logout"
+    android:id="@+id/logout"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    android:layout_marginTop="200dp"></Button>
 </androidx.constraintlayout.widget.ConstraintLayout>
